--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/jcifs-1.3.18.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="F:/tlEclipseWorkSpace/FilePlore/libs/CoreSynergyStorage.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
