--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
         android:name="com.changhong.fileplore.application.MyApp"
