--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -66,7 +66,7 @@
         </activity>
         <activity
             android:name="com.changhong.fileplore.activities.NetActivity"
-            android:label="PhotoGridActivity" >
+            android:label="NetActivity" >
         </activity>
 
         <service
