可以获取分享文件了，还没解决侧滑

--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="F:/tlEclipseWorkSpace/FilePlore/libs/CoreSynergyStorage.jar"/>
+	<classpathentry kind="src" path="/SlidingMenuLib"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
