--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -70,6 +70,10 @@
             android:name="com.changhong.fileplore.activities.ShowNetFileActivity"
             android:label="ShowNetSharePathActivity" >
         </activity>
+        <activity
+            android:name="com.changhong.fileplore.activities.VideoActivity"
+            android:label="VideoActivity" >
+        </activity>
 
         <service
             android:name="com.chobit.corestorage.CoreService"
