--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="libs/jcifs-1.3.18.jar"/>
+	<classpathentry kind="lib" path="libs/CoreSynergyStorage.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="F:/tlEclipseWorkSpace/FilePlore/libs/CoreSynergyStorage.jar"/>
