--- a/.classpath
+++ b/.classpath
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="libs/jcifs-1.3.18.jar"/>
-	<classpathentry kind="lib" path="libs/CoreSynergyStorage.jar"/>
-<<<<<<< HEAD
-	<classpathentry kind="src" path="/SlidingMenuLib"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-=======
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="F:/tlEclipseWorkSpace/FilePlore/libs/CoreSynergyStorage.jar"/>
-	<classpathentry kind="src" path="/SlidingMenuLib"/>
->>>>>>> 02a1afe2bd852c7d4dc367a59659e3ed12d26e0d
+	<classpathentry combineaccessrules="false" kind="src" path="/SlidingMenuLib"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
