--- a/project.properties
+++ b/project.properties
@@ -11,9 +11,4 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-22
-<<<<<<< HEAD
-android.library.reference.1=..\\SlidingMenuLib
-=======
-android.library.reference.1=..\\SlidingMenuLib
->>>>>>> 02a1afe2bd852c7d4dc367a59659e3ed12d26e0d
+target=Google Inc.:Google APIs (x86 System Image):19
