--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/core-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
