--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,7 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -21,6 +20,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="22" />
@@ -89,9 +89,13 @@
             android:name="com.changhong.fileplore.activities.ShowDownFileActivity"
             android:label="ShowDownFileActivity" >
         </activity>
-         <activity
+        <activity
             android:name="com.changhong.fileplore.activities.CaptureActivity"
             android:label="ShowDownFileActivity" >
+        </activity>
+        <activity
+            android:name="com.changhong.fileplore.activities.ShowSharefileActivity"
+            android:label="SharefileActivity" >
         </activity>
 
         <service
