完成微信和QQ文件浏览

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -97,6 +97,10 @@
             android:name="com.changhong.fileplore.activities.ShowSharefileActivity"
             android:label="SharefileActivity" >
         </activity>
+         <activity
+            android:name="com.changhong.fileplore.activities.QQListActivity"
+            android:label="QQListActivity" >
+        </activity>
 
         <service
             android:name="com.chobit.corestorage.CoreService"
