--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/core-2.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/open_sdk_r5276_lite.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
